tutorial/L04_expose_externally/manifests/products-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: products-service
  labels:
    app: shopinsights
    component: products-service
    tutorial: personalized
    lesson: "04"
spec:
  to:
    kind: Service
    name: products-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
